<resources>
    <string name="app_name">MS3</string>
    <string name="realised_date">Realised Date :</string>
    <string name="duration">Duration :</string>
    <string name="genre">Genre :</string>
    <string name="discription">Discription</string>
    <string name="directors">Directors :</string>
    <string name="original_language">Original Language :</string>
    <string name="setting">Setting</string>
    <string name="pilih_bahasa">Change Language</string>
    <string name="tv_show">TV Show</string>
    <string name="movie">Movie</string>
    <string name="rating">Rating : </string>
    <string name="date_of_release">Date of Release :</string>
    <string name="overview">Overview :</string>
    <string name="back">Back</string>
    <string name="dummyBahasa">Indonesia</string>
    <string name="dummyOverview">Lorem Ipsum is simply dummy text of the printing </string>
    <string name="dummyRilis">2 January 2019</string>
    <string name="dummyRating">(7.5/10) dari 1000 Ratingers</string>
    <string name="dummyJudul">JUDUL</string>
</resources>
