<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradasi">

            <ImageView
                android:id="@+id/img_thumnail"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:padding="10dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dummyJudul"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_thumnail" />

            <TextView
                android:id="@+id/statik_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:drawableLeft="@drawable/ic_star_border_black_24dp"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:text="@string/rating"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_judul" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dummyRating"
                app:layout_constraintBottom_toBottomOf="@id/statik_rating"
                app:layout_constraintStart_toEndOf="@id/statik_rating"
                app:layout_constraintTop_toTopOf="@id/statik_rating" />

            <TextView
                android:id="@+id/statik_rilis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="5dp"
                android:text="@string/date_of_release"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statik_rating" />

            <TextView
                android:id="@+id/tv_rilis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dummyRilis"
                app:layout_constraintBottom_toBottomOf="@+id/statik_rilis"
                app:layout_constraintStart_toEndOf="@id/statik_rilis"
                app:layout_constraintTop_toTopOf="@id/statik_rilis" />

            <TextView
                android:id="@+id/statik_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:drawableLeft="@drawable/ic_more_black_24dp"
                android:drawablePadding="5dp"
                android:text="@string/overview"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statik_rilis" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="2dp"
                android:text="@string/dummyOverview"
                app:layout_constraintStart_toStartOf="@id/statik_overview"
                app:layout_constraintTop_toBottomOf="@id/statik_overview" />

            <TextView
                android:id="@+id/statik_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_language_black_24dp"
                android:drawablePadding="5dp"
                android:paddingTop="3dp"
                android:text="@string/original_language"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <TextView
                android:id="@+id/tv_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dummyBahasa"
                app:layout_constraintBottom_toBottomOf="@+id/statik_lang"
                app:layout_constraintStart_toEndOf="@id/statik_lang"
                app:layout_constraintTop_toTopOf="@+id/statik_lang" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>